@@ -1013,6 +1013,10 @@ projectable_expr[LogicalExpressionPlan plan] returns[LogicalExpression expr]
    {
        $expr = $case_expr.expr;
    }
+ | case_cond[$plan]
+   {
+       $expr = $case_cond.expr;
+   }
 ;
 
 dot_proj returns[List<Object> cols]
@@ -1066,7 +1070,7 @@ case_expr[LogicalExpressionPlan plan] returns[LogicalExpression expr]
 @init {
     List<LogicalExpression> exprs = new ArrayList<LogicalExpression>();
 }
- : ^( CASE ( expr[$plan] { exprs.add($expr.expr); } )+ )
+ : ^( CASE_EXPR ( expr[$plan] { exprs.add($expr.expr); } )+ )
     {
         // Convert CASE tree to nested bincond expressions. Please also see
         // QueryParser.g for how CASE tree is constructed from case statement.
@@ -1078,21 +1082,40 @@ case_expr[LogicalExpressionPlan plan] returns[LogicalExpression expr]
         BinCondExpression prevBinCondExpr = null;
         BinCondExpression currBinCondExpr = null;
         for (int i = 0; i < numWhenBranches; i++) {
-            if (i == 0) {
-                currBinCondExpr = new BinCondExpression( $plan,
-                    new EqualExpression( $plan, exprs.get(3*i), exprs.get(3*i+1) ),
-                    exprs.get(3*i+2),
-                    elseExpr );
-            } else {
-                currBinCondExpr = new BinCondExpression( $plan,
-                    new EqualExpression( $plan, exprs.get(3*i), exprs.get(3*i+1) ),
-                    exprs.get(3*i+2),
-                    prevBinCondExpr );
-            }
+            currBinCondExpr = new BinCondExpression( $plan,
+                new EqualExpression( $plan, exprs.get(3*i), exprs.get(3*i+1) ), exprs.get(3*i+2),
+                prevBinCondExpr == null ? elseExpr : prevBinCondExpr);
             prevBinCondExpr = currBinCondExpr;
         }
         $expr = currBinCondExpr;
         $expr.setLocation( new SourceLocation( (PigParserNode)$case_expr.start ) );
+    }
+;
+
+case_cond[LogicalExpressionPlan plan] returns[LogicalExpression expr]
+@init {
+    List<LogicalExpression> conds = new ArrayList<LogicalExpression>();
+    List<LogicalExpression> exprs = new ArrayList<LogicalExpression>();
+}
+ : ^( CASE_COND ^( WHEN ( cond[$plan] { conds.add($cond.expr); } )+ )
+                ^( THEN ( expr[$plan] { exprs.add($expr.expr); } )+ ) )
+    {
+        // Convert CASE tree to nested bincond expressions. Please also see
+        // QueryParser.g for how CASE tree is constructed from case statement.
+        boolean hasElse = exprs.size() \% 2 == 1;
+        LogicalExpression elseExpr = hasElse ? exprs.get(exprs.size() - 1)
+                                             : new ConstantExpression($plan, null);
+        int numWhenBranches = conds.size();
+        BinCondExpression prevBinCondExpr = null;
+        BinCondExpression currBinCondExpr = null;
+        for (int i = 0; i < numWhenBranches; i++) {
+            currBinCondExpr = new BinCondExpression( $plan,
+                conds.get(i), exprs.get(i),
+                prevBinCondExpr == null ? elseExpr : prevBinCondExpr);
+            prevBinCondExpr = currBinCondExpr;
+        }
+        $expr = currBinCondExpr;
+        $expr.setLocation( new SourceLocation( (PigParserNode)$case_cond.start ) );
     }
 ;
 
