@@ -117,7 +117,91 @@ public class TestCase {
     }
 
     /**
-     * Verify that FrontendException is thrown when case expression is missing.
+     * Verify that conditional CASE statement without else branch works correctly.
+     * @throws Exception
+     */
+    @Test
+    public void testConditionalWithNoElse() throws Exception {
+        PigServer pigServer = new PigServer(ExecType.LOCAL);
+        Data data = resetData(pigServer);
+
+        data.set("foo",
+                tuple(1),
+                tuple(2),
+                tuple(3),
+                tuple(4),
+                tuple(5),
+                tuple(6),
+                tuple(7)
+                );
+
+        pigServer.registerQuery("A = LOAD 'foo' USING mock.Storage() AS (i:int);");
+        pigServer.registerQuery("B = FOREACH A GENERATE i, (" +
+                "  CASE " +
+                "    WHEN i % 5 == 0 THEN '5n'" + // Conditional expression in when branch
+                "    WHEN i % 5 == 1 THEN '5n+1'" +
+                "    WHEN i % 5 == 2 THEN '5n+2'" +
+                "    WHEN i % 5 == 3 THEN '5n+3'" +
+                "  END" +
+                ") AS s;");
+        pigServer.registerQuery("C = FILTER B BY s IS NOT NULL;");
+        pigServer.registerQuery("STORE C INTO 'bar' USING mock.Storage();");
+
+        List<Tuple> out = data.get("bar");
+        assertEquals(6, out.size());
+        assertEquals(tuple(1,"5n+1"), out.get(0));
+        assertEquals(tuple(2,"5n+2"), out.get(1));
+        assertEquals(tuple(3,"5n+3"), out.get(2));
+        assertEquals(tuple(5,"5n"),   out.get(3));
+        assertEquals(tuple(6,"5n+1"), out.get(4));
+        assertEquals(tuple(7,"5n+2"), out.get(5));
+    }
+
+    /**
+     * Verify that conditional CASE statement with else branch works correctly.
+     * @throws Exception
+     */
+    @Test
+    public void testConditionalWithElse() throws Exception {
+        PigServer pigServer = new PigServer(ExecType.LOCAL);
+        Data data = resetData(pigServer);
+
+        data.set("foo",
+                tuple(1),
+                tuple(2),
+                tuple(3),
+                tuple(4),
+                tuple(5),
+                tuple(6),
+                tuple(7)
+                );
+
+        pigServer.registerQuery("A = LOAD 'foo' USING mock.Storage() AS (i:int);");
+        pigServer.registerQuery("B = FOREACH A GENERATE i, (" +
+                "  CASE " +
+                "    WHEN i % 5 == 0 THEN '5n'" + // Conditional expression in when branch
+                "    WHEN i % 5 == 1 THEN '5n+1'" +
+                "    WHEN i % 5 == 2 THEN '5n+2'" +
+                "    WHEN i % 5 == 3 THEN '5n+3'" +
+                "    ELSE                 '5n+4'" +
+                "  END" +
+                ");");
+        pigServer.registerQuery("STORE B INTO 'bar' USING mock.Storage();");
+
+        List<Tuple> out = data.get("bar");
+        assertEquals(7, out.size());
+        assertEquals(tuple(1,"5n+1"), out.get(0));
+        assertEquals(tuple(2,"5n+2"), out.get(1));
+        assertEquals(tuple(3,"5n+3"), out.get(2));
+        assertEquals(tuple(4,"5n+4"), out.get(3));
+        assertEquals(tuple(5,"5n"),   out.get(4));
+        assertEquals(tuple(6,"5n+1"), out.get(5));
+        assertEquals(tuple(7,"5n+2"), out.get(6));
+    }
+
+    /**
+     * Verify that FrontendException is thrown when case expression is missing,
+     * and when branches do not contain conditional expressions.
      * @throws Exception
      */
     @Test(expected = FrontendException.class)
@@ -136,7 +220,7 @@ public class TestCase {
         pigServer.registerQuery("A = LOAD 'foo' USING mock.Storage() AS (i:int);");
         pigServer.registerQuery("B = FOREACH A GENERATE (" +
                 "  CASE " + // No case expression
-                "    WHEN 0 THEN '3n'" +
+                "    WHEN 0 THEN '3n'" + // When expression is not conditional
                 "    WHEN 1 THEN '3n+1'" +
                 "    ELSE        '3n+2'" +
                 "  END" +
